--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/bootstrap.min.css">
-      
+
       <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
@@ -34,11 +34,13 @@
           </form>
         </aside>
         <section class="col-md-8 section" id="section">
-          <output id="cards">
-            <figure class="git-user-image" style="display: none;">
-              <img class="thumbnail img-responsive" src="img/loading.gif">
-            </figure>
-          </output>
+          <div class="row">
+            <output class="col-md-4" id="cards">
+              <figure class="git-user-image" style="display: none;">
+                <img class="thumbnail img-responsive" src="img/loading.gif">
+              </figure>
+            </output>
+          </div>
         </section>
       </div>
     </div>
