--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <link rel="stylesheet" href="css/bootstrap.min.css">
 
       <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="css/mycss.css">
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -36,7 +37,7 @@
         <section class="col-md-8 section" id="section">
           <div class="row">
             <output class="col-md-4" id="cards">
-              <figure class="git-user-image" style="display: none;">
+              <figure class="text-center git-user-image" style="display: none;">
                 <img class="thumbnail img-responsive" src="img/loading.gif">
               </figure>
             </output>
@@ -54,12 +55,12 @@
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
-        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='//www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-        ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
+    //     (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+    //     function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+    //     e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+    //     e.src='//www.google-analytics.com/analytics.js';
+    //     r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+    //     ga('create','UA-XXXXX-X');ga('send','pageview');
+    // </script>
   </body>
 </html>
