adds functionality to show all users

--- a/app/github/github.html
+++ b/app/github/github.html
@@ -13,27 +13,55 @@
         </div>
         <button class="btn btn-primary btn-block"
                 ng-click="doSearch(requestedUsername)">Search</button>
-        <img src="" alt="" class="img-responsive">
+        <button class="btn btn-success btn-block"
+                ng-click="allUser()">Search for all users</button>
+
       </div>
 
       <div class="col-md-8">
         <div class="row">
 
-          <div class="col-md-2 col-xs-4">
-            <img src="{{ userData.avatar_url }}" alt="{{ userData.name }}" class="img-responsive img-circle">
+          <div class="col-md-2 col-xs-3 text-center">
+            <span class="fa-stack fa-lg fa-5x" ng-if="userimage">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-user fa-stack-1x fa-inverse"></i>
+            </span>
+            <img class="img-responsive img-circle"
+                 src="{{ userData.avatar_url || avatar_url}}"
+                 alt="{{ userData.name}}">
           </div>
 
           <div class="col-md-10 col-xs-8">
             <div class="row form-group">
-              <label class="control-label">{{ userData.name }}</label>
+              <label class="col-md-6 control-label">{{ userData.name || requestedUsername}}</label>
             </div>
             <div class="row form-group">
-              <label class="col-md-6 control-label">{{ userData.following }} - Following</label>
-              <label class="col-md-6 control-label">{{ userData.followers }} - Followers</label>
+              <label class="col-md-6 control-label">{{ userData.following || 0 }} - Following</label>
+              <label class="col-md-6 control-label">{{ userData.followers || 0 }} - Followers</label>
             </div>
           </div>
 
-          <div class="col-m-12">
+          <div class="col-md-12 col-xs-12">
+            <div class="row">
+
+              <div class="">
+                <div class="col-md-6 col-sm-6 col-xs-12" ng-repeat="user in users">
+                  <div class="media">
+                    <div class="media-left col-md-4 col-sm-6 col-xs-4">
+                      <a href="{{ user.html_url }}">
+                        <img class="img-responsive img-circle" src="{{ user.avatar_url || allavatar_url }}" alt="...">
+                      </a>
+                    </div>
+                    <div class="media-body">
+                      <h4 class="media-heading">
+                        <a href="{{ user.html_url }}">{{ user.login }}</a>
+                      </h4>
+                      <a href="{{ user.html_url }}">{{ user.html_url }}</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
 
           </div>
 
