--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,11 @@
 <!--[if gt IE 8]><!--> <html lang="en" ng-app="angularApp" class="no-js"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Github profile view</title>
-  <meta name="description" content="">
+  <meta name="description" content="Github profile viewer">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
   <link rel="stylesheet/less" type="text/css" href="app.less"/>
