--- a/app/github/user-details.html
+++ b/app/github/user-details.html
@@ -25,7 +25,7 @@
     </div>
 
     <button class="btn btn-info btn-block"
-          ng-click="showRepo(userData.login)">Show Repository</button>
+          ng-click="showRepo(requestedUsername)">Show Repository</button>
 
   </div>
 </div>
