updating the styling and markup

--- a/app/github/search-box.html
+++ b/app/github/search-box.html
@@ -1,12 +1,15 @@
-<div class="well col-md-4">
-  <div class="form-group">
-    <input class="form-control"
-           type="text"
-           placeholder="Enter username"
-           ng-model="requestedUsername"
-           autofocus>
+<div class="col-md-4">
+  <div class="well">
+    <div class="form-group">
+      <input class="form-control"
+             type="text"
+             placeholder="Enter username"
+             ng-model="requestedUsername"
+             autofocus>
+    </div>
+    <button class="btn btn-success btn-block"
+            ng-click="doSearch(requestedUsername)">Search user</button>
+
   </div>
-  <button class="btn btn-primary btn-block"
-          ng-click="doSearch(requestedUsername)">Search</button>
 
 </div>
