--- a/app/github/github.html
+++ b/app/github/github.html
@@ -1,7 +1,10 @@
-
 <div class="jumbotron">
   <div class="container">
     <div class="row">
+
+      <div class="alert alert-danger" ng-show="errorfound">
+        <em>{{ requestedUsername }} : {{ errorfound.statusText }}</em>
+      </div>
 
       <searchbox></searchbox>
 
