fixing the markup removing all the unrequired document

--- a/app/github/github.html
+++ b/app/github/github.html
@@ -1,45 +1,45 @@
 <div class="jumbotron">
+
   <div class="container">
     <div class="row">
 
-      <div class="alert alert-danger" ng-show="errorfound">
-        <em>{{ requestedUsername }} : {{ errorfound.statusText }}</em>
+      <div class="col-md-12">
+        <div class="alert alert-danger" ng-show="errorfound">
+          <em>{{ errorfound.statusText }}</em>
+        </div>
       </div>
 
-      <searchbox></searchbox>
+      <div class="col-md-4 col-md-offset-4">
 
-      <div class="col-md-8">
-        <div class="row">
+        <searchbox></searchbox>
 
-          <userdetails></userdetails>
+        <userdetails></userdetails>
 
-          <div class="col-md-12 col-xs-12">
-            <div class="row">
+        <div class="col-md-12 col-xs-12">
+          <div class="row">
 
-              <div class="">
-                <div class="col-md-6 col-sm-6 col-xs-12" ng-repeat="user in users">
-                  <div class="media">
-                    <div class="media-left col-md-4 col-sm-6 col-xs-4">
-                      <a href="{{ user.html_url }}">
-                        <img class="img-responsive img-circle" src="{{ user.avatar_url || allavatar_url }}" alt="...">
-                      </a>
-                    </div>
-                    <div class="media-body">
-                      <h4 class="media-heading">
-                        <a href="{{ user.html_url }}">{{ user.login }}</a>
-                      </h4>
-                      <a href="{{ user.html_url }}">{{ user.html_url }}</a>
-                    </div>
-                  </div>
+            <div class="col-md-6 col-sm-6 col-xs-12" ng-repeat="user in users">
+              <div class="media">
+                <div class="media-left col-md-4 col-sm-6 col-xs-4">
+                  <a href="{{ user.html_url }}">
+                    <img class="img-responsive img-circle" src="{{ user.avatar_url || allavatar_url }}" alt="...">
+                  </a>
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">
+                    <a href="{{ user.html_url }}">{{ user.login }}</a>
+                  </h4>
+                  <a href="{{ user.html_url }}">{{ user.html_url }}</a>
                 </div>
               </div>
             </div>
 
           </div>
-
         </div>
+
       </div>
 
     </div>
   </div>
+
 </div>
