--- a/app/github/user-details.html
+++ b/app/github/user-details.html
@@ -3,14 +3,15 @@
     <li class="list-group-item">
       <div class="row">
         <div class="col-md-4">
-          <span class="fa-stack fa-lg fa-3x" ng-if="!userData.avatar_url">
+          <span class="fa-stack fa-lg fa-3x" ng-show="!userData.avatar_url">
             <i class="fa fa-square fa-stack-2x"></i>
-            <i class="fa fa-github fa-stack-1x fa-inverse" ng-if="userimage"></i>
+            <i class="fa fa-github fa-stack-1x fa-inverse"
+               ng-show="!search"></i>
             <i class="fa fa-circle-o-notch fa-spin fa-stack-1x fa-inverse"
-               ng-show="avatar_url">
-             </i>
+               ng-show="search">
+            </i>
           </span>
-          <figure ng-if="userData.avatar_url">
+          <figure ng-show="userData.avatar_url">
             <img class="img-responsive img-thumbnail"
              src="{{ userData.avatar_url }}"
              alt="{{ userData.name }}">
@@ -18,7 +19,7 @@
 
         </div>
         <div class="col-md-8">
-           <h2>{{ userData.name || requestedUsername}}</h2>
+           <h4>{{ userData.name || requestedUsername}}</h4>
            <a href=""
               ng-click="showRepo('/'+requestedUsername)">
               Show Repository
