github user show is done

--- a/app/github-user/github-user.html
+++ b/app/github-user/github-user.html
@@ -1,31 +1,106 @@
-<div class="jumbotron">
+<div class="panel panel-success" ng-if="!showSearchResult">
+  <div class="list-group form-horizontal">
 
-  <div class="container">
-    <div class="row">
+    <li class="list-group-item">
+      <div class="row">
+        <div class="col-md-4">
+          <span class="fa-stack fa-lg fa-5x" ng-show="!userData.avatar_url">
+            <i class="fa fa-square fa-stack-2x"></i>
+            <i class="fa fa-github fa-stack-1x fa-inverse"
+               ng-show="!search"></i>
+            <i class="fa fa-circle-o-notch fa-spin fa-stack-1x fa-inverse"
+               ng-show="search">
+            </i>
+          </span>
+          <a href="" ng-click="showDetails(userData.login)">
+            <figure ng-show="userData.avatar_url">
+              <img class="img-responsive img-circle"
+               src="{{ userData.avatar_url || userImage }}"
+               alt="{{ userData.login }}">
+            </figure>
+          </a>
 
-      <div class="col-md-12">
-        <div class="alert alert-danger" ng-show="errorfound">
-          <em>{{ errorfound.statusText }}</em>
+        </div>
+        <div class="col-md-8">
+          <h4>
+            <a href="" ng-click="showDetails(userData.login)">
+              {{ userData.name }}
+            </a>
+          </h4>
+          <div ng-show="user_details">
+            <small>Private gist - {{ userData.private_gists || 'hidden' }}</small><br>
+            <small>Public gist - {{ userData.public_gists || 'hidden'}}</small><br>
+            <small>Total private repos - {{ userData.total_private_repos || 'hidden' }}</small>
+          </div>
         </div>
       </div>
+    </li>
 
-      <div class="col-md-4 col-sm-6 col-xs-12">
-
-        <searchbox></searchbox>
-
-      </div>
-
-      <div class="col-md-6 col-sm-6 col-xs-12">
-
-        <div ng-if="github_details">
-          <userdetails></userdetails>
+    <li class="list-group-item">
+      <div class="row form-group">
+        <label class="col-sm-4 control-label">Working for</label>
+        <div class="col-sm-8">
+          {{ userData.company || '' }}
         </div>
-
-        <div class="col-md-12 col-xs-12" ng-show="!github_details" ui-view></div>
-
       </div>
+    </li>
+    <li class="list-group-item">
+      <div class="row form-group">
+        <label class="col-sm-4 control-label">Following</label>
+        <div class="col-sm-8">
+          {{ userData.following || '' }}
+        </div>
+      </div>
+    </li>
+    <li class="list-group-item">
+      <div class="row form-group">
+        <label class="col-sm-4 control-label">Followers</label>
+        <div class="col-sm-8">
+          {{ userData.followers || '' }}
+        </div>
+      </div>
+    </li>
+    <li class="list-group-item">
+      <div class="row form-group">
+        <label class="col-sm-4 control-label">Location</label>
+        <div class="col-sm-8">
+          {{ userData.location || "" }}
+        </div>
+      </div>
+    </li>
+    <li class="list-group-item">
+      <div class="row form-group">
+        <label class="col-sm-4 control-label">Email</label>
+        <div class="col-sm-8">
+          {{ userData.email || '' }}
+        </div>
+      </div>
+    </li>
+    <li class="list-group-item">
+      <div class="row form-group">
+        <label class="col-sm-4 control-label">Public repository</label>
+        <div class="col-sm-8">
+          {{ userData.public_repos || '' }}
+        </div>
+      </div>
+    </li>
+    <li class="list-group-item">
+      <div class="row form-group">
+        <label class="col-sm-4 control-label">Public gist</label>
+        <div class="col-sm-8">
+          {{ userData.public_gists || '' }}
+        </div>
+      </div>
+    </li>
+    <li class="list-group-item">
+      <div class="row form-group">
+        <label class="col-sm-4 control-label">Hireable</label>
+        <div class="col-sm-8">
+          <i class="fa fa-check" ng-show="userData.hireable"></i>
+          <i class="fa fa-times" ng-show="!userData.hireable"></i>
+        </div>
+      </div>
+    </li>
 
-    </div>
   </div>
-
 </div>
