--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="app.js"></script>
   <script src="github/github.js"></script>
-  <!--<script src="github-user/github-user.js"></script> -->
+  <script src="github-user/github-user.js"></script>
   <!--<script src="github-repo/github-repo.js"></script> -->
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
