--- a/app/github/search-result.html
+++ b/app/github/search-result.html
@@ -1,10 +1,9 @@
-<div class="list-group">
+<div class="list-group" ng-if="showSearchResult">
   <a href="" class="list-group-item active">Search result <span class="badge">{{ searchresult.total_count }}</span></a>
   <a href=""
      class="list-group-item"
      ng-repeat="result in searchresult.items"
-     ng-click="showDetails(requestedUsername)">
-     {{ result.login }}
-     Type - {{ result.type }}<span class="badge">{{ result.score }}</span>
+     ng-click="showDetails(result.login)">
+     {{ result.login }}<span class="badge">{{ result.score }}</span>
   </a>
 </div>
