--- a/app/github/search-result.html
+++ b/app/github/search-result.html
@@ -3,7 +3,7 @@
   <a href=""
      class="list-group-item"
      ng-repeat="result in searchresult.items"
-     ng-click="showDetails(result.login)">
+     ng-click="showUserDetails(result.login)">
      {{ result.login }}<span class="badge">{{ result.score }}</span>
   </a>
 </div>
