--- a/app/github-user/github-user.html
+++ b/app/github-user/github-user.html
@@ -6,13 +6,9 @@
         <div class="col-md-4">
           <span class="fa-stack fa-lg fa-5x" ng-show="!userData.avatar_url">
             <i class="fa fa-square fa-stack-2x"></i>
-            <i class="fa fa-github fa-stack-1x fa-inverse"
-               ng-show="!search"></i>
-            <i class="fa fa-circle-o-notch fa-spin fa-stack-1x fa-inverse"
-               ng-show="search">
-            </i>
+            <i class="fa fa-circle-o-notch fa-spin fa-stack-1x fa-inverse"></i>
           </span>
-          <a href="" ng-click="showDetails(userData.login)">
+          <a href="" ng-click="showDetails()">
             <figure ng-show="userData.avatar_url">
               <img class="img-responsive img-circle"
                src="{{ userData.avatar_url || userImage }}"
@@ -23,7 +19,7 @@
         </div>
         <div class="col-md-8">
           <h4>
-            <a href="" ng-click="showDetails(userData.login)">
+            <a href="" ng-click="showDetails()">
               {{ userData.name }}
             </a>
           </h4>
