--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
   <script src="github/github.js"></script>
   <script src="github-user/github-user.js"></script>
   <script src="github-repo/github-repo.js"></script>
+  <script src="github-repo-details/github-repo-details.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
