--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,11 @@
   <script src="github/github.js"></script>
   <script src="github-user/github-user.js"></script>
   <script src="github-repo/github-repo.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="http://code.highcharts.com/highcharts.js"></script>
+  <script src="http://code.highcharts.com/modules/exporting.js"></script>
   <script src="github-repo-details/github-repo-details.js"></script>
+  <script src="github-repo-details/repo-language.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
