completed the funcationality

--- a/app/github-repo-details/github-repo-details.html
+++ b/app/github-repo-details/github-repo-details.html
@@ -1,7 +1,11 @@
-<div class="show-repo-lang"
-    ng-if="showRepoDetails"></div>
-
 <div class="list-groups">
+  <a href="" class="list-group-item active">
+    Language used in - {{ reponame }}
+    <i class="fa fa-circle-o-notch fa-spin pull-right" ng-if="searching"></i>
+  </a>
+  <a href="">
+    <div class="show-repo-lang" ng-if="showRepoDetails"></div>
+  </a>
   <a href=""
     class="list-group-item"
     ng-repeat="(key, value) in repoDetails">
