--- a/app/github-repo-details/github-repo-details.html
+++ b/app/github-repo-details/github-repo-details.html
@@ -9,6 +9,6 @@
   <a href=""
     class="list-group-item"
     ng-repeat="(key, value) in repoDetails">
-    {{ key }} <span class="badge">{{ value }} - files</span>
+    {{ key }} <span class="badge">{{ value }} - bytes</span>
   </a>
 </div>
