--- a/app/github-repo/github-repo.html
+++ b/app/github-repo/github-repo.html
@@ -2,8 +2,8 @@
 
   <a href=""
      class="list-group-item active"
-     ng-click="showRepo(requestedUsername)">
-     Show Repository
+     ng-click="showUserDetails(gotouser)">
+     <i class="fa fa-arrow-left"></i> Back
      <i class="fa fa-circle-o-notch fa-spin pull-right" ng-if="searching"></i>
      <span class="badge"
            ng-if="repoData">
