--- a/app/github-repo/github-repo.html
+++ b/app/github-repo/github-repo.html
@@ -4,7 +4,7 @@
      class="list-group-item active"
      ng-click="showUserDetails(gotouser)">
      <i class="fa fa-arrow-left"></i> Back
-     <i class="fa fa-circle-o-notch fa-spin pull-right" ng-if="searching"></i>
+     <i class="fa fa-spinner fa-pulse" ng-if="searching"></i>
      <span class="badge"
            ng-if="repoData">
            Total projects - {{ repoData.length }}
