--- a/app/github-user/github-user.html
+++ b/app/github-user/github-user.html
@@ -6,7 +6,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-lg fa-5x" ng-show="!userData.avatar_url">
             <i class="fa fa-square fa-stack-2x"></i>
-            <i class="fa fa-circle-o-notch fa-spin fa-stack-1x fa-inverse"></i>
+            <i class="fa fa-spinner fa-pulse fa-stack-1x fa-inverse"></i>
           </span>
           <a href="" ng-click="showDetails()">
             <figure>
