--- a/app/github-repo/github-repo.html
+++ b/app/github-repo/github-repo.html
@@ -2,8 +2,9 @@
 
   <a href=""
      class="list-group-item active"
-     ng-click="showUserDetails(gotouser)">
-     <i class="fa fa-arrow-left"></i> Back
+     ng-click="gotoUser(gotouser)">
+     <!-- <i class="fa fa-arrow-left"></i> Back -->
+     Shows the list of projects
      <i class="fa fa-spinner fa-pulse" ng-if="searching"></i>
      <span class="badge"
            ng-if="repoData">
