--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   <meta name="description" content="Github profile viewer">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> -->
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
-  <link rel="stylesheet/less" type="text/css" href="app.less"/>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/2.3.1/less.min.js" type="text/javascript"></script>
+  <link rel="stylesheet" type="text/css" href="assets/css/styles.css"/>
 </head>
 <body>
 
@@ -26,6 +22,6 @@
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
-  <script src="github-viewer.min.js"></script>
+  <script src="assets/js/github-viewer.add.js"></script>
 </body>
 </html>
